--- a/tcf_website/templates/base/components/message.html
+++ b/tcf_website/templates/base/components/message.html
@@ -1,3 +1,8 @@
+{% comment %}
+Component that handles the messages at the top of the screen (e.g. "Successfully updated your review!")
+Included in base.html, which means it can go anywhere, but notably used in review submission messages.
+{% endcomment %}
+
 {% load static %}
 
 {% block styles %}
