--- a/tcf_website/templates/base/components/navbar.html
+++ b/tcf_website/templates/base/components/navbar.html
@@ -1,3 +1,4 @@
+{# Navbar component. Used in base.html. #}
 {% load static %}
 
 {% block styles %}
@@ -13,7 +14,7 @@
     </a>
 
     <!-- tCF search -->
-    {% include "search/searchbar.html" %}
+    {% include "search/components/searchbar.html" %}
 
     <!-- tCF navbar toggler -->
     <button class="navbar-toggler menu" id="menu-toggle">
