--- a/tcf_website/templates/base/components/notification.html
+++ b/tcf_website/templates/base/components/notification.html
@@ -1,3 +1,9 @@
+{% comment %}
+Notification panel component. Used in base.html, which means this is something that
+we want to show up on pretty much every page on the site.
+Can be repurposed for any announcement (e.g. recruitment, fundraising, review drives)
+{% endcomment %}
+
 <div id="notification-panel" role="alert"
      class="alert alert-info alert-dismissible text-left mb-5 fade show">
   <h4 class="alert-heading">Donate to theCourseForum!</h4>
