--- a/tcf_website/templates/base/components/sidebar.html
+++ b/tcf_website/templates/base/components/sidebar.html
@@ -1,3 +1,5 @@
+{# Sidebar component. Used in base.html. #}
+
 {% load static %}
 
 <!-- Sidebar -->
@@ -79,4 +81,4 @@
   </div>
 </div>
 
-{% include "base/bugform.html" %}
+{% include "base/components/bugform.html" %}
