--- a/tcf_website/templates/base/components/toolbar.html
+++ b/tcf_website/templates/base/components/toolbar.html
@@ -1,3 +1,9 @@
+{% comment %}
+"Toolbar" component. A little misleading, because it includes both breadcrumbs AND
+the sorting buttons on the right when used on the department/course pages.
+Used in department.html, course.html, and course_instructor.html.
+{% endcomment %}
+
 <div class="tcf-toolbar">
     <div class="btn-toolbar justify-content-center text-center text-md-left px-3"
          role="toolbar" aria-label="Toolbar with button groups">
