--- a/tcf_website/templates/browse/browse.html
+++ b/tcf_website/templates/browse/browse.html
@@ -1,4 +1,6 @@
 {% extends "base/base.html" %}
+{# Browse page. Shows up at https://thecourseforum.com/browse #}
+
 {% load static %}
 
 {% block title %}Browse - theCourseForum{% endblock %}
