--- a/tcf_website/templates/browse/grouped_schools.html
+++ b/tcf_website/templates/browse/grouped_schools.html
@@ -1,4 +1,8 @@
 {% extends "browse/school.html" %}
+{% comment %}
+Special component that wraps everything that isn't the E-school or College.
+Used in browse.html.
+{% endcomment %}
 
 {% block department_list %}
   <ul class="school-list">
