--- a/tcf_website/templates/browse/school.html
+++ b/tcf_website/templates/browse/school.html
@@ -1,3 +1,5 @@
+{# Shows a school and its departments. Subcomponent of browse.html #}
+
 <div class="school card mb-3">
     <div class="card-header pt-3">
         <h3 class="card-title mb-0">{{school_name}}</h3>
