--- a/tcf_website/templates/instructor/instructor.html
+++ b/tcf_website/templates/instructor/instructor.html
@@ -1,4 +1,6 @@
 {% extends "base/base.html" %}
+{# Instructor page. Shows their classes and stats, both aggregate and per class. #}
+
 {% load static %}
 
 {% block title %}{{instructor.full_name}} - theCourseForum{% endblock %}
