--- a/tcf_website/templates/landing/dashboard.html
+++ b/tcf_website/templates/landing/dashboard.html
@@ -1,4 +1,6 @@
 {% extends "base/base.html" %}
+{# A placeholder dashboard page, currently unused. #}
+
 {% load static %}
 
 {% block styles %}
@@ -6,7 +8,7 @@
 {% endblock %}
 
 {% block content %}
-<!-- A placeholder dashboard page, currently unused -->
+
 <div class="jumbotron">
     <h1 class="display-4">Welcome to theCourseForum
     </h1>
