--- a/tcf_website/templates/login/extra_info_form.html
+++ b/tcf_website/templates/login/extra_info_form.html
@@ -1,4 +1,6 @@
 {% extends "base/base.html" %}
+{# Don't think this gets used anywhere? Make sure to update this comment when it is! #}
+
 {% load static %}
 
 {% block content %}
