--- a/tcf_website/templates/login/login_modal.html
+++ b/tcf_website/templates/login/login_modal.html
@@ -1,4 +1,5 @@
-<!-- Login modal (imported in index.html) -->
+{# Login modal. Imported in index.html, shows up anywhere you click "Log in". #}
+
 {% load static %}
 <div class="modal fade" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="deleteModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
