--- a/tcf_website/templates/profile/components/delete_confirm_modal.html
+++ b/tcf_website/templates/profile/components/delete_confirm_modal.html
@@ -1,4 +1,5 @@
-<!-- Delete Confirmation Modal -->
+{# Pops up to confirm review deletion. Used in review.html (when on the user_reviews.html page) #}
+
 <div class="modal fade" id="deleteReviewModal{{review_id}}" tabindex="-1" role="dialog" aria-labelledby="deleteModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
