--- a/tcf_website/templates/profile/profile.html
+++ b/tcf_website/templates/profile/profile.html
@@ -1,4 +1,6 @@
 {% extends "base/base.html" %}
+{# Profile page. Shows up at https://thecourseforum.com/profile #}
+
 {% load static %}
 
 {% block title %}My Profile - theCourseForum{% endblock %}
