--- a/tcf_website/templates/search/components/searchbar.html
+++ b/tcf_website/templates/search/components/searchbar.html
@@ -1,5 +1,5 @@
-<!-- tCF search -->
-<!-- To be imported into templates (navbar, landing page) -->
+{# Component for the searchbar. Used in navbar.html and landing.html. #}
+
 <form class="form-inline flex-grow-1" action="/search" method="get">
   <div class="input-group flex-grow-1">
     <input type="search" class="form-control border border-right-0"
