--- a/tcf_website/templates/search/search.html
+++ b/tcf_website/templates/search/search.html
@@ -1,4 +1,6 @@
 {% extends "base/base.html" %}
+{# Page for search results. #}
+
 {% load static %}
 
 {% block title %}{{displayed_query}} - theCourseForum{% endblock %}
