--- a/tcf_website/templates/base/index.html
+++ b/tcf_website/templates/base/index.html
@@ -1,3 +1,9 @@
+{% comment %}
+True base of the site. ALL HTML files ultimately inherit from this.
+It's necessary to separate meta information from base.html because the
+landing page doesn't use it.
+{% endcomment %}
+
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
@@ -7,8 +13,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{% block title %}theCourseForum{% endblock %}</title>
     <link rel="icon"
-      type="image/png"
-      href="{% static 'base/img/new_logo.png' %}">
+          type="image/png"
+          href="{% static 'base/img/new_logo.png' %}">
 
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
@@ -16,18 +22,27 @@
           crossorigin="anonymous">
 
     <!-- Google Tag Manager -->
-    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-    })(window,document,'script','dataLayer','GTM-54T5TXX');</script>
-    <!-- End Google Tag Manager -->    <script src="https://kit.fontawesome.com/ed3998fccc.js" crossorigin="anonymous"></script>
+    <script>(function (w, d, s, l, i) {
+        w[l] = w[l] || [];
+        w[l].push({
+            'gtm.start':
+                new Date().getTime(), event: 'gtm.js'
+        });
+        var f = d.getElementsByTagName(s)[0],
+            j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : '';
+        j.async = true;
+        j.src =
+            'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
+        f.parentNode.insertBefore(j, f);
+    })(window, document, 'script', 'dataLayer', 'GTM-54T5TXX');</script>
+    <!-- End Google Tag Manager -->
+    <script src="https://kit.fontawesome.com/ed3998fccc.js" crossorigin="anonymous"></script>
 
     <!-- tCF Custom Styling -->
-    <link rel="stylesheet" href="{% static 'base/tcf-style.css' %}" />
+    <link rel="stylesheet" href="{% static 'base/tcf-style.css' %}"/>
     <!-- Google Fonts: Lato, Open Sans -->
     <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans" />
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans"/>
 
     {% block basestyles %}{% endblock %}
 
@@ -35,27 +50,29 @@
 </head>
 
 <body class="body">
-  {% block body %}{% endblock %}
+{% block body %}{% endblock %}
 
-  <!-- Login modal -->
-  {% include "login/login_modal.html" %}
+<!-- Login modal -->
+{% include "login/login_modal.html" %}
 
-  <!-- Google Tag Manager (noscript) -->
-  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-54T5TXX"
-  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-  <!-- End Google Tag Manager (noscript) -->
+<!-- Google Tag Manager (noscript) -->
+<noscript>
+    <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-54T5TXX"
+            height="0" width="0" style="display:none;visibility:hidden"></iframe>
+</noscript>
+<!-- End Google Tag Manager (noscript) -->
 
-  <!-- Bootstrap core JavaScript -->
-  <script src="https://code.jquery.com/jquery-3.5.1.min.js"
-          integrity="sha384-ZvpUoO/+PpLXR1lu4jmpXWu80pZlYUAfxl5NsBMWOEPSjUn/6Z/hRTt8+pR6L4N2"
-          crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
-          integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
-          crossorigin="anonymous"></script>
+<!-- Bootstrap core JavaScript -->
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"
+        integrity="sha384-ZvpUoO/+PpLXR1lu4jmpXWu80pZlYUAfxl5NsBMWOEPSjUn/6Z/hRTt8+pR6L4N2"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
+        crossorigin="anonymous"></script>
 
-  {% block basejs %}{% endblock %}
+{% block basejs %}{% endblock %}
 
-  {% block js %}{% endblock %}
+{% block js %}{% endblock %}
 </body>
 
 </html>
