--- a/tcf_website/templates/reviews/new_review.html
+++ b/tcf_website/templates/reviews/new_review.html
@@ -1,4 +1,6 @@
 {% extends "base/base.html" %}
+{# New review form. #}
+
 {% load static %}
 
 {% block title %}Write a Review - theCourseForum{% endblock %}
@@ -13,7 +15,7 @@
   <div class="card">
     <form class="card-body px-md-5" action="{% url 'new_review' %}" method="POST">
         {% csrf_token %}
-        {% include 'reviews/review_form_content.html' %}
+        {% include 'reviews/components/review_form_content.html' %}
         <div class="new-review-submit row py-4">
           <button type="submit" class="btn btn-primary mx-auto">Submit Review</button>
         </div>
