--- a/tcf_website/templates/reviews/review.html
+++ b/tcf_website/templates/reviews/review.html
@@ -46,10 +46,13 @@
                 {% endif %}
 
                 <div class="review-content mb-2">
+                  <!-- Max-height container for the review text collapse feature -->
                   <div class="review-text-body collapse" id="reviewText{{review.id}}"
                      aria-expanded="false">
+                     <!-- Full review text -->
                     <p class="review-text-full">{{ review.text }}</p>
                   </div>
+                  <!-- Collapser link (click target spans entire row block) -->
                   <a role="button" class="review-collapse-link btn-block p-1 collapsed"
                      data-toggle="collapse" href="#reviewText{{review.id}}"
                      aria-expanded="false" aria-controls="reviewText{{review.id}}">
