Add AdSense script

--- a/tcf_website/templates/base/index.html
+++ b/tcf_website/templates/base/index.html
@@ -21,7 +21,12 @@
     j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
     })(window,document,'script','dataLayer','GTM-54T5TXX');</script>
-    <!-- End Google Tag Manager -->    <script src="https://kit.fontawesome.com/ed3998fccc.js" crossorigin="anonymous"></script>
+    <!-- End Google Tag Manager -->
+    
+    <script src="https://kit.fontawesome.com/ed3998fccc.js" crossorigin="anonymous"></script>
+
+    <!--Google AdSense-->
+    <script data-ad-client="ca-pub-1816162577232603" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 
     <!-- tCF Custom Styling -->
     <link rel="stylesheet" href="{% static 'base/tcf-style.css' %}" />
